@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 application {
@@ -26,11 +27,31 @@ repositories {
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
+
+    implementation 'org.openjfx:javafx-controls:24'
+    implementation 'org.openjfx:javafx-fxml:24'
+    implementation 'org.openjfx:javafx-graphics:24'
+    implementation 'org.openjfx:javafx-base:24'
+
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
     runtimeOnly group: 'org.xerial', name: 'sqlite-jdbc', version: '3.45.1.0'
+}
+
+javafx {
+    version = "24"
+    modules = [ 'javafx.controls' ]
+}
+
+tasks.withType(JavaExec).configureEach {
+    doFirst {
+        jvmArgs = [
+                '--module-path', files(configurations.runtimeClasspath).asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
+    }
 }
 
 test {
